<resources>
    <string name="app_name">Tranner</string>
    <string name="enter_category_name">Custom category…</string>
    <string name="main_item_delete">delete</string>
    <string name="main_item_backdrop">backdrop</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="category_activity">category_activity</string>

    <string name="item_move">move</string>
    <string name="search_button">search</string>
    <string name="detail_activity">detail_activity</string>
    <string name="detail_description">Type your description…</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_about_us">About us</string>
    <string name="nav_exit">Exit</string>


    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="delete_title">Are you sure?</string>
    <string name="delete_content">Won\'t be able to recover this file!</string>
    <string name="delete_cancel">No, cancel plx!</string>
    <string name="delete_confirm">Yes, delete it!</string>
    <string name="detail_title">details</string>
    <string name="error">Ups, something went wrong!</string>
    <string name="category_title">New category</string>
    <string name="cancel">Cancel</string>
    <string name="web_title">Pick BACKDROP</string>
    <string name="wait_text">Waiting for response…</string>
    <string name="familiar_title">Familiar TITLE</string>
    <string name="add_familiar">Add FAMILIAR</string>
    <string name="go_back">Go back</string>
    <string name="lets_add">Lets add it!</string>
    <string name="new_item_title">New TITLE</string>
    <string name="add_new">Add NEW</string>
    <string name="create">Create</string>
    <string name="category_choose">Choose</string>
    <string name="category_custom">Custom</string>
    <string name="category_custom_title">Your category</string>
    <string name="category_custom_hint">category name</string>
    <string name="web_image_not_found">No images found</string>
    <string name="web_image_search">Search</string>
    <string name="nav_themes">Themes</string>
    <string name="nav_other">Other</string>
</resources>
