<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp">

    <ProgressBar
        android:id="@+id/web_progress_bar"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:padding="@dimen/dialog_padding"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="8dp">

        <ImageView
            android:id="@+id/web_dialog_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true">

        </ImageView>
    </android.support.v7.widget.CardView>


</RelativeLayout>